k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pokedex
  labels:
    name: pokedex
